--- a/AulaAspNetFilmes/Pages/Filmes/Create.cshtml
+++ b/AulaAspNetFilmes/Pages/Filmes/Create.cshtml
@@ -28,10 +28,16 @@
                 <input asp-for="Filme.Genero" class="form-control" />
                 <span asp-validation-for="Filme.Genero" class="text-danger"></span>
             </div>
+            
             <div class="form-group">
                 <label asp-for="Filme.Preco" class="control-label"></label>
                 <input asp-for="Filme.Preco" class="form-control" />
                 <span asp-validation-for="Filme.Preco" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Filme.Pontos" class="control-label"></label>
+                <input asp-for="Filme.Pontos" class="form-control" />
+                <span asp-validation-for="Filme.Pontos" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
