--- a/AulaAspNetFilmes/Pages/Filmes/Index.cshtml
+++ b/AulaAspNetFilmes/Pages/Filmes/Index.cshtml
@@ -10,6 +10,15 @@
 <p>
     <a asp-page="Create">Create New</a>
 </p>
+<form>
+    <p>
+        <select asp-for="FilmeGenero" asp-items="@Model.Genero">
+            <option value="">Todos</option>
+        </select>
+        Buscar Filmes: <input type="text" asp-for="TermoBusca" />
+        <input type="submit" value="Buscar"/>
+    </p>
+</form>
 <table class="table">
     <thead>
         <tr>
@@ -24,6 +33,8 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Filme[0].Preco)
+            </th><th>
+                @Html.DisplayNameFor(model => model.Filme[0].Pontos)
             </th>
             <th></th>
         </tr>
@@ -43,6 +54,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Preco)
             </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Pontos)
+                </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
                 <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
