Aula Model Concluida

--- a/AulasAspNetMVC/Views/Shared/_Layout.cshtml
+++ b/AulasAspNetMVC/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-black" asp-controller="Filmes" asp-action="Index">Filmes</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-lik text-black" asp-controller="FilmesNovoes" asp-action="Index"></a>
+                        </li>
                     </ul>
                 </div>
             </div>
