Aula Migration concluida

--- a/AulasAspNetMVC/Views/Shared/_Layout.cshtml
+++ b/AulasAspNetMVC/Views/Shared/_Layout.cshtml
@@ -25,11 +25,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+@*
                         <li class="nav-item">
                             <a class="nav-link text-black" asp-controller="Filmes" asp-action="Index">Filmes</a>
                         </li>
+*@
                         <li class="nav-item">
-                            <a class="nav-lik text-black" asp-controller="FilmesNovoes" asp-action="Index"></a>
+                            <a class="nav-lik text-dark" asp-area="" asp-controller="FilmesNovoes" asp-action="Index">Filmes Novos</a>
                         </li>
                     </ul>
                 </div>
