--- a/AulasAspNetMVC/Views/FilmesNovoes/Create.cshtml
+++ b/AulasAspNetMVC/Views/FilmesNovoes/Create.cshtml
@@ -31,6 +31,11 @@
                 <label asp-for="Valor" class="control-label"></label>
                 <input asp-for="Valor" class="form-control" />
                 <span asp-validation-for="Valor" class="text-danger"></span>
+            </div> 
+            <div class="form-group">
+                <label asp-for="Pontos" class="control-label"></label>
+                <input asp-for="Pontos" class="form-control" />
+                <span asp-validation-for="Pontos" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
