--- a/AulasAspNetMVC/Views/FilmesNovoes/Index.cshtml
+++ b/AulasAspNetMVC/Views/FilmesNovoes/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<AulasAspNetMVC.Models.FilmesNovo>
+﻿@model AulasAspNetMVC.Models.FilmesViewModels
 
 @{
     ViewData["Title"] = "Index";
@@ -9,45 +9,69 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<form asp-controller="FilmesNovoes" asp-action="Index">
+    <p>
+        Titulo: <input type="text" name="texto" />
+
+
+        Generos: <select asp-for="Genero" asp-items="@Model.Genero">
+
+            <option value="">Todos</option>
+
+        </select>
+        <input type="submit" value="Pesquisar" />
+    </p>
+</form>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Titulo)
+                @Html.DisplayNameFor(model => model.Filmes[0].Titulo)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DataLancamento)
+                @Html.DisplayNameFor(model => model.Filmes[0].DataLancamento)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Genero)
+                @Html.DisplayNameFor(model => model.Filmes[0].Genero)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Valor)
+                @Html.DisplayNameFor(model => model.Filmes[0].Valor)
             </th>
-            <th></th>
+            <th>
+                @Html.DisplayNameFor(model => model.Filmes[0].Pontos)
+            </th>
+
+
+            <th>
+
+            </th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Titulo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DataLancamento)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Genero)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Valor)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.Filmes)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Titulo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DataLancamento)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Genero)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Valor)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Pontos)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
